# ratty

./: Cargo.toml  LICENSE  README.md
config/: ratty.toml
protocols/: graphics.md
src/: config.rs  inline.rs  keyboard.rs  kitty.rs  main.rs  model.rs  mouse.rs  plugin.rs  rgp.rs  runtime.rs  scene.rs  soft_terminal.rs  systems.rs  terminal.rs
widget/: Cargo.toml
widget/examples/: demo.rs  draw.rs  editor.rs
widget/src/: lib.rs
