[package]
name = "ratty"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
arboard = "3.6"
bevy = { version = "0.18.1", default-features = true }
portable-pty = "0.8"
ratatui = "0.30"
soft_ratatui = { version = "0.2.1", default-features = false, features = ["cosmic-text"] }
tobj = "4.0"
vt100 = "0.16"
